force-app/main/default/objects/Request_To_Fundraise__c/Request_To_Fundraise__c.object-meta.xml
<CustomObject>
    <description>Used for tracking the process of becoming a camp quality fundraiser. Has approval workflow</description>
    <label>Request To Fundraise</label>
    <nameField>
        <displayFormat>FRN-{0000}</displayFormat>
        <label>Fundraising Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests To Fundraise</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>