force-app/main/default/objects/Request_To_Fundraise__c/fields/Amount_Raised_On_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Amount_Raised_On_Campaign__c</fullName>
    <formula>Campaign__r.AmountWonOpportunities</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Raised (On Campaign)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>