force-app/main/default/objects/Request_To_Fundraise__c/fields/Application_Details__c.field-meta.xml
<CustomField>
    <fullName>Application_Details__c</fullName>
    <inlineHelpText>Online: auto populates from the details provided by the applicant
Manual: provide a brief description of the intended fundraising</inlineHelpText>
    <label>Application Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>