force-app/main/default/objects/Request_To_Fundraise__c/fields/Application_Made_By__c.field-meta.xml
<CustomField>
    <fullName>Application_Made_By__c</fullName>
    <label>Application Made By?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application made via online platform</fullName>
            </value>
            <value>
                <fullName>Application made via Branch Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>