force-app/main/default/objects/Request_To_Fundraise__c/fields/ATF_Status__c.field-meta.xml
<CustomField>
    <fullName>ATF_Status__c</fullName>
    <defaultValue>&quot;New Request/Registration&quot;</defaultValue>
    <label>ATF Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Request/Registration</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Request Approval</fullName>
            </value>
            <value>
                <fullName>Authorised</fullName>
            </value>
            <value>
                <fullName>ATF created and sent</fullName>
            </value>
            <value>
                <fullName>Funds Received</fullName>
            </value>
            <value>
                <fullName>Thanked</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Authority To Fundraise Declined</fullName>
                <label>RTF Declined</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>