force-app/main/default/objects/Request_To_Fundraise__c/fields/Budgeted_Net_Income__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Net_Income__c</fullName>
    <formula>Gross_Income__c - Event_Expenses__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budgeted Net Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>