force-app/main/default/objects/Request_To_Fundraise__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <inlineHelpText>Online: auto populated
Manual: until the RTF has been through the approval process link this application to your Branch’s Master Campaign:
Eg; ILLA Community Fundraising non gst</inlineHelpText>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Requests To Fundraise</relationshipLabel>
    <relationshipName>Fundraising_Registrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>