force-app/main/default/objects/Request_To_Fundraise__c/fields/Comments_in_support_of_application__c.field-meta.xml
<CustomField>
    <fullName>Comments_in_support_of_application__c</fullName>
    <inlineHelpText>Additional Comments from the Fundraising Coordinator to support the application.  Please share anything which the manager should consider not outlined above.</inlineHelpText>
    <label>Comments in support of application</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>