force-app/main/default/objects/Request_To_Fundraise__c/fields/EDH_Offline_Donations__c.field-meta.xml
<CustomField>
    <fullName>EDH_Offline_Donations__c</fullName>
    <label>EDH Offline Donations</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>