force-app/main/default/objects/Request_To_Fundraise__c/fields/Event_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Event_Attendees__c</fullName>
    <inlineHelpText>How many people will attend the event?</inlineHelpText>
    <label>Event Attendees</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>