force-app/main/default/objects/Request_To_Fundraise__c/fields/Event_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Event_Expenses__c</fullName>
    <inlineHelpText>What are the expenses for the event? Please include Food, drinks, entertainment venue hire, prizes etc.</inlineHelpText>
    <label>Event Expenses</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>