force-app/main/default/objects/Request_To_Fundraise__c/fields/Event_Fundraising_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Event_Fundraising_Ratio__c</fullName>
    <formula>( Gross_Income__c -   Event_Expenses__c  )/Gross_Income__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net Profit/Gross Profit</inlineHelpText>
    <label>Event Fundraising Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>