force-app/main/default/objects/Request_To_Fundraise__c/fields/Event_Income_Per_Participant__c.field-meta.xml
<CustomField>
    <fullName>Event_Income_Per_Participant__c</fullName>
    <formula>Gross_Income__c /  Event_Attendees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How much on average would be needed to be given by each participant to meet budget?</inlineHelpText>
    <label>Event Income Per Participant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>