force-app/main/default/objects/Request_To_Fundraise__c/fields/Event_Meets_60_40_rule__c.field-meta.xml
<CustomField>
    <fullName>Event_Meets_60_40_rule__c</fullName>
    <formula>if ( Event_Expenses__c = 0, true,  if (Event_Fundraising_Ratio__c &gt;= 0.60, true,false))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Meets 60-40 rule?</label>
    <type>Checkbox</type>
</CustomField>