force-app/main/default/objects/Request_To_Fundraise__c/fields/Event_ticket_price__c.field-meta.xml
<CustomField>
    <fullName>Event_ticket_price__c</fullName>
    <inlineHelpText>What is the cost to participate?</inlineHelpText>
    <label>Event ticket price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>