force-app/main/default/objects/Request_To_Fundraise__c/fields/Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expense_Amount__c</fullName>
    <inlineHelpText>Enter the amount of expense that will be taken out of the gross income</inlineHelpText>
    <label>Expense Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>