force-app/main/default/objects/Request_To_Fundraise__c/fields/Expense_at_your_event__c.field-meta.xml
<CustomField>
    <fullName>Expense_at_your_event__c</fullName>
    <label>Expense at your event?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>