force-app/main/default/objects/Request_To_Fundraise__c/fields/Explained_online_fundraising__c.field-meta.xml
<CustomField>
    <fullName>Explained_online_fundraising__c</fullName>
    <inlineHelpText>Explain CQ fundraising platform and this is a really great way to raise additional funds through their network, There is no fee to the platform owner taken out of any donation.</inlineHelpText>
    <label>Explained online fundraising</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>