force-app/main/default/objects/Request_To_Fundraise__c/fields/Extra_support_required__c.field-meta.xml
<CustomField>
    <fullName>Extra_support_required__c</fullName>
    <inlineHelpText>Is there any extra support that they need? (i.e. links to videos, key messages, brochures, representative etc)</inlineHelpText>
    <label>Extra support required</label>
    <type>TextArea</type>
</CustomField>