force-app/main/default/objects/Request_To_Fundraise__c/fields/Fundraiser_includes_event__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser_includes_event__c</fullName>
    <inlineHelpText>Does the fundraising include an event with expenses that will be taken out of the gross income</inlineHelpText>
    <label>Is this fundraiser an event?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>