force-app/main/default/objects/Request_To_Fundraise__c/fields/Fundraiser_Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser_Page_Name__c</fullName>
    <label>Fundraiser Page Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>