force-app/main/default/objects/Request_To_Fundraise__c/fields/Fundraiser_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Fundraiser_Page_URL__c</fullName>
    <inlineHelpText>Online: auto populates
Manual: leave blank</inlineHelpText>
    <label>Fundraiser Page URL</label>
    <type>Url</type>
</CustomField>