force-app/main/default/objects/Request_To_Fundraise__c/fields/Fundraising_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_End_Date__c</fullName>
    <label>Fundraising End Date</label>
    <type>Date</type>
</CustomField>