force-app/main/default/objects/Request_To_Fundraise__c/fields/Fundraising_logo_needed__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_logo_needed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do they need to use to the CQ branded Fundraising logo
New field in checkbox version</description>
    <label>Fundraising logo needed?</label>
    <type>Checkbox</type>
</CustomField>