force-app/main/default/objects/Request_To_Fundraise__c/fields/Fundraising_Mechanisms__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Mechanisms__c</fullName>
    <inlineHelpText>Online: auto populates
Manual: leave blank</inlineHelpText>
    <label>Fundraising Mechanisms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>