force-app/main/default/objects/Request_To_Fundraise__c/fields/Fundraising_Mechanisms_Comment__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Mechanisms_Comment__c</fullName>
    <inlineHelpText>Online: auto populates, please add additional details when speaking to the applicant
Manual: Provide details of all the fundraising mechanisms eg raffle, ticket sales, fundraising games, auction</inlineHelpText>
    <label>Fundraising Mechanisms Comment</label>
    <type>TextArea</type>
</CustomField>