force-app/main/default/objects/Request_To_Fundraise__c/fields/Fundraising_on_behalf_of_an_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_on_behalf_of_an_Organisation__c</fullName>
    <label>Fundraising on behalf of an Organisation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>