force-app/main/default/objects/Request_To_Fundraise__c/fields/Fundraising_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please search for and link the RTF to the organisation in Salesforce</inlineHelpText>
    <label>Fundraising Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requests To Fundraise</relationshipLabel>
    <relationshipName>Requests_To_Fundraise</relationshipName>
    <type>Lookup</type>
</CustomField>