force-app/main/default/objects/Request_To_Fundraise__c/fields/Fundraising_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Start_Date__c</fullName>
    <label>Fundraising Start Date</label>
    <type>Date</type>
</CustomField>