force-app/main/default/objects/Request_To_Fundraise__c/fields/Granted_Authority_Summary__c.field-meta.xml
<CustomField>
    <fullName>Granted_Authority_Summary__c</fullName>
    <inlineHelpText>Give a clear description of the fundraising that is being approved. Include details of the date/venue &amp; approved fundraising mechanisms. This information is a merge field on the ATF letter</inlineHelpText>
    <label>Granted Authority Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>