force-app/main/default/objects/Request_To_Fundraise__c/fields/Gross_Income__c.field-meta.xml
<CustomField>
    <fullName>Gross_Income__c</fullName>
    <inlineHelpText>Projected income before expenses</inlineHelpText>
    <label>Gross Income</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>