force-app/main/default/objects/Request_To_Fundraise__c/fields/High_Risk_Links__c.field-meta.xml
<CustomField>
    <fullName>High_Risk_Links__c</fullName>
    <inlineHelpText>Is this activity linked to an organisation or existing event (e.g. Psychic Expo, Sexpo, Cigarette Brand, Alcohol Brand, Pharmaceutical, etc.) that may compromise our brand or our children and families?</inlineHelpText>
    <label>High Risk Links</label>
    <type>TextArea</type>
</CustomField>