force-app/main/default/objects/Request_To_Fundraise__c/fields/How_supporter_is_fundraising__c.field-meta.xml
<CustomField>
    <fullName>How_supporter_is_fundraising__c</fullName>
    <label>How supporter is fundraising?</label>
    <type>TextArea</type>
</CustomField>