force-app/main/default/objects/Request_To_Fundraise__c/fields/Insurance_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Coverage__c</fullName>
    <inlineHelpText>Is there appropriate insurance coverage?
(car/bike rally, mass participation event or high risk activity will need P/L organised by the fundraiser)</inlineHelpText>
    <label>Insurance Coverage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>