force-app/main/default/objects/Request_To_Fundraise__c/fields/Internal_Research__c.field-meta.xml
<CustomField>
    <fullName>Internal_Research__c</fullName>
    <inlineHelpText>Please search for the person and the event online to ensure the person/event doesn&apos;t have a bad press/high risk.  Please flag any risks found here, as well as any other useful information.</inlineHelpText>
    <label>Internal Research</label>
    <type>TextArea</type>
</CustomField>