force-app/main/default/objects/Request_To_Fundraise__c/fields/Is_fundraiser_an_event__c.field-meta.xml
<CustomField>
    <fullName>Is_fundraiser_an_event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is fundraiser an event?</label>
    <type>Checkbox</type>
</CustomField>