force-app/main/default/objects/Request_To_Fundraise__c/fields/Is_fundraiser_running_a_raffle__c.field-meta.xml
<CustomField>
    <fullName>Is_fundraiser_running_a_raffle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is fundraiser running a raffle?</label>
    <type>Checkbox</type>
</CustomField>