force-app/main/default/objects/Request_To_Fundraise__c/fields/Is_school_fundraising__c.field-meta.xml
<CustomField>
    <fullName>Is_school_fundraising__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this school doing the fundraiser</description>
    <label>Is this a school fundraiser?</label>
    <type>Checkbox</type>
</CustomField>