force-app/main/default/objects/Request_To_Fundraise__c/fields/Is_there_local_media_organised__c.field-meta.xml
<CustomField>
    <fullName>Is_there_local_media_organised__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Any local media organised?
new field from prev textbook question</description>
    <label>Is there local media organised?</label>
    <type>Checkbox</type>
</CustomField>