force-app/main/default/objects/Request_To_Fundraise__c/fields/Legacy_CQ_Contact__c.field-meta.xml
<CustomField>
    <fullName>Legacy_CQ_Contact__c</fullName>
    <label>Legacy CQ Contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>