force-app/main/default/objects/Request_To_Fundraise__c/fields/LegacyID__c.field-meta.xml
<CustomField>
    <fullName>LegacyID__c</fullName>
    <externalId>true</externalId>
    <label>LegacyID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>