force-app/main/default/objects/Request_To_Fundraise__c/fields/Local_media_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Local_media_opportunity__c</fullName>
    <inlineHelpText>Provide details of any media the applicant has/will organised</inlineHelpText>
    <label>Any local media organised?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>