force-app/main/default/objects/Request_To_Fundraise__c/fields/Meets_60_40_rule__c.field-meta.xml
<CustomField>
    <fullName>Meets_60_40_rule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this event meet the 60-40 fundraising income/expense rule?</description>
    <inlineHelpText>Does this event meet the 60-40 fundraising income/expense rule?</inlineHelpText>
    <label>Meets 60-40 rule?</label>
    <type>Checkbox</type>
</CustomField>