force-app/main/default/objects/Request_To_Fundraise__c/fields/Motivation_for_Participating__c.field-meta.xml
<CustomField>
    <fullName>Motivation_for_Participating__c</fullName>
    <label>Motivation for Participating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>