force-app/main/default/objects/Request_To_Fundraise__c/fields/Online_fundraising_explained__c.field-meta.xml
<CustomField>
    <fullName>Online_fundraising_explained__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Online fundraising explained?</label>
    <type>Checkbox</type>
</CustomField>