force-app/main/default/objects/Request_To_Fundraise__c/fields/Organisation_ABN__c.field-meta.xml
<CustomField>
    <fullName>Organisation_ABN__c</fullName>
    <label>Organisation ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>