force-app/main/default/objects/Request_To_Fundraise__c/fields/Organisation_Address__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Address__c</fullName>
    <label>Organisation Address</label>
    <type>TextArea</type>
</CustomField>