force-app/main/default/objects/Request_To_Fundraise__c/fields/Organisation_School__c.field-meta.xml
<CustomField>
    <fullName>Organisation_School__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>School or Org that is connected to the fundraiser</description>
    <inlineHelpText>Please search for and link the RTF to the organisation in Salesforce</inlineHelpText>
    <label>Organisation/School</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Requests To Fundraise (Organisation/School)</relationshipLabel>
    <relationshipName>Requests_To_Fundraise1</relationshipName>
    <type>Lookup</type>
</CustomField>