force-app/main/default/objects/Request_To_Fundraise__c/fields/Page_ID__c.field-meta.xml
<CustomField>
    <fullName>Page_ID__c</fullName>
    <inlineHelpText>Only populated for online requests. Leave blank for manual requests</inlineHelpText>
    <label>Page ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>