force-app/main/default/objects/Request_To_Fundraise__c/fields/Page_Status__c.field-meta.xml
<CustomField>
    <fullName>Page_Status__c</fullName>
    <label>Page Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>