force-app/main/default/objects/Request_To_Fundraise__c/fields/Parent_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Campaign_Name__c</fullName>
    <formula>IF(
NOT(ISBLANK( Campaign__r.Parent.Name )),
 Campaign__r.Parent.Name ,
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Campaign Name</label>
    <type>Text</type>
</CustomField>