force-app/main/default/objects/Request_To_Fundraise__c/fields/Parental_Permission_For_Minors__c.field-meta.xml
<CustomField>
    <fullName>Parental_Permission_For_Minors__c</fullName>
    <label>Parental Permission For Minors</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>