force-app/main/default/objects/Request_To_Fundraise__c/fields/Position_at_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Position_at_Organisation__c</fullName>
    <label>Position at Organisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>