force-app/main/default/objects/Request_To_Fundraise__c/fields/PSP_Booking__c.field-meta.xml
<CustomField>
    <fullName>PSP_Booking__c</fullName>
    <label>Fundraising linked to PSP booking?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>