force-app/main/default/objects/Request_To_Fundraise__c/fields/Puppet_Show__c.field-meta.xml
<CustomField>
    <fullName>Puppet_Show__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Puppet Show for fundraiser&apos;s at schools</inlineHelpText>
    <label>Puppet Show</label>
    <referenceTo>PuppetShow__c</referenceTo>
    <relationshipLabel>Requests To Fundraise</relationshipLabel>
    <relationshipName>Requests_To_Fundraise</relationshipName>
    <type>Lookup</type>
</CustomField>