force-app/main/default/objects/Request_To_Fundraise__c/fields/Questions_from_call__c.field-meta.xml
<CustomField>
    <fullName>Questions_from_call__c</fullName>
    <inlineHelpText>Do they have any other questions?</inlineHelpText>
    <label>Questions from call</label>
    <type>TextArea</type>
</CustomField>