force-app/main/default/objects/Request_To_Fundraise__c/fields/Raffle_permit_application__c.field-meta.xml
<CustomField>
    <fullName>Raffle_permit_application__c</fullName>
    <inlineHelpText>Who will apply/pay for the permit?</inlineHelpText>
    <label>Raffle permit application?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>