force-app/main/default/objects/Request_To_Fundraise__c/fields/Raffle_permit_required__c.field-meta.xml
<CustomField>
    <fullName>Raffle_permit_required__c</fullName>
    <inlineHelpText>Will a permit be required based on the State or Territory?</inlineHelpText>
    <label>Raffle permit required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>