force-app/main/default/objects/Request_To_Fundraise__c/fields/Raffle_print_tickets__c.field-meta.xml
<CustomField>
    <fullName>Raffle_print_tickets__c</fullName>
    <inlineHelpText>Will the applicant be printing raffle tickets?</inlineHelpText>
    <label>Printed raffle tickets?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>