force-app/main/default/objects/Request_To_Fundraise__c/fields/Raffle_prize_pool__c.field-meta.xml
<CustomField>
    <fullName>Raffle_prize_pool__c</fullName>
    <inlineHelpText>What is the total value of the prize pool? Check your States government guidance on raffles to see if a permit is required</inlineHelpText>
    <label>Raffle prize pool</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>