force-app/main/default/objects/Request_To_Fundraise__c/fields/Raffle_ticket_price__c.field-meta.xml
<CustomField>
    <fullName>Raffle_ticket_price__c</fullName>
    <inlineHelpText>How much will the tickets be sold for?</inlineHelpText>
    <label>Raffle ticket price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>