force-app/main/default/objects/Request_To_Fundraise__c/fields/Raffle_tickets_sold_before_event__c.field-meta.xml
<CustomField>
    <fullName>Raffle_tickets_sold_before_event__c</fullName>
    <inlineHelpText>Are tickets being sold before the &apos;Event&apos;?</inlineHelpText>
    <label>Raffle tickets sold before event?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>