force-app/main/default/objects/Request_To_Fundraise__c/fields/Reason_for_Declining__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Declining__c</fullName>
    <inlineHelpText>Articulate why the application is being declined. Include as much information as possible.</inlineHelpText>
    <label>Reason for Declining</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>