force-app/main/default/objects/Request_To_Fundraise__c/fields/Risks_associated_with_the_fundraiser__c.field-meta.xml
<CustomField>
    <fullName>Risks_associated_with_the_fundraiser__c</fullName>
    <inlineHelpText>Is there any significant risks associated with this fundraiser?</inlineHelpText>
    <label>Risks associated with the fundraiser?</label>
    <type>TextArea</type>
</CustomField>