force-app/main/default/objects/Request_To_Fundraise__c/fields/Running_Raffle__c.field-meta.xml
<CustomField>
    <fullName>Running_Raffle__c</fullName>
    <inlineHelpText>Does this fundraiser have a raffle?</inlineHelpText>
    <label>Running Raffle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>