force-app/main/default/objects/Request_To_Fundraise__c/fields/SITC_Fundraising__c.field-meta.xml
<CustomField>
    <fullName>SITC_Fundraising__c</fullName>
    <label>School Fundraising?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>