force-app/main/default/objects/Request_To_Fundraise__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <inlineHelpText>Income prediction by the applicant</inlineHelpText>
    <label>Fundraising Target</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>