force-app/main/default/objects/Request_To_Fundraise__c/fields/Total_Raised__c.field-meta.xml
<CustomField>
    <fullName>Total_Raised__c</fullName>
    <label>Total Raised</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>