force-app/main/default/objects/Request_To_Fundraise__c/fields/Trader_s_Agreement_Required__c.field-meta.xml
<CustomField>
    <fullName>Trader_s_Agreement_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does this fundraise require a traders agreement to go ahead?</description>
    <label>Trader&apos;s Agreement Required</label>
    <type>Checkbox</type>
</CustomField>