force-app/main/default/objects/Request_To_Fundraise__c/fields/Traders_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Traders_Agreement__c</fullName>
    <inlineHelpText>Corporate Partnership Agreement MUST be completed If the fundraising initiative involves % or $ from the sale of retail goods or services</inlineHelpText>
    <label>Traders Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Field</valueSetName>
    </valueSet>
</CustomField>