force-app/main/default/objects/Request_To_Fundraise__c/fields/Use_Of_Fundraising_Logo__c.field-meta.xml
<CustomField>
    <fullName>Use_Of_Fundraising_Logo__c</fullName>
    <inlineHelpText>Provide details of how the CQ fundraising logo will be used</inlineHelpText>
    <label>Use of Fundraising Logo?</label>
    <type>TextArea</type>
</CustomField>