force-app/main/default/objects/Request_To_Fundraise__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <inlineHelpText>Address where the fundraising will take place</inlineHelpText>
    <label>Venue</label>
    <type>TextArea</type>
</CustomField>