force-app/main/default/objects/Request_To_Fundraise__c/fields/Why_are_they_supporting_CQ__c.field-meta.xml
<CustomField>
    <fullName>Why_are_they_supporting_CQ__c</fullName>
    <inlineHelpText>This provides valuable information about how our digital marketing is working</inlineHelpText>
    <label>Registration motivated from?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facebook Post</fullName>
            </value>
            <value>
                <fullName>Instagram Post</fullName>
            </value>
            <value>
                <fullName>Fundraising Event</fullName>
            </value>
            <value>
                <fullName>Program</fullName>
            </value>
            <value>
                <fullName>Other (please give details)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>