force-app/main/default/objects/Request_To_Fundraise__c/recordTypes/Community_Fundraising.recordType-meta.xml
<RecordType>
    <fullName>Community_Fundraising</fullName>
    <active>false</active>
    <description>Community Fundraising based RTFS</description>
    <label>Community Fundraising</label>
</RecordType>